	Usefull to protect EFL call from another thread.

2011-09-12  Mike Blumenkrantz

        * Add ecore_con_server_fd_get, ecore_con_client_fd_get for manipulating
          server file descriptors.

2011-09-13  Mike Blumenkrantz

        * Add ECORE_CON_EVENT_CLIENT_WRITE, ECORE_CON_EVENT_SERVER_WRITE for
          obtaining progress of socket writes

2011-09-18  Carsten Haitzler (The Rasterman)

        * Fix bug in Ecore_X generic event handling for extended event
          sizes when freeing (and allocating) the data.

2011-09-29  Youness Alaoui (KaKaRoTo)

        * Port ecore-con to work on systems without IPv6 support
        * Use inet_ntop instead of getnameinfo for ecore_con_client_get_ip
        * Added ecore-con unit test

2011-10-28  Jiyoun Park

        * Fix bug in Ecore_X using geometry value instead of
          recently requested geometry value

2011-10-28 Rafael Antognolli

        * Make the framebuffer engine input use ecore_input_evas instead
        of feeding evas input events directly.

2011-11-02 Nicolas Aguirre

	* Add support ecore_cocoa_evas engine.
	* Fix ecore_cocoa code to correctly handle cocoa window.

2011-11-02 Bluezery

	* Fix return error handling in ecore_file_download when
        ecore_con_url_get() fails.

2011-11-20 Vincent Torri

	* Ecore_Win32, Ecore_WinCE: fix Shift, Control and Alt keys
	detection
	* Ecore_Win32: fix "mouse-down inside and mouse-up outside" issue

2011-11-2  Carsten Haitzler (The Rasterman)

        * Fix bug ecore-evas for fb, buffer, sdl back-ends to ensure
        mouse is in on init (as events wont always give this) and focus
        is set on show if appropriate if no focus in/out events come
        from the back-end later
        * Fix setting override state to only hide if it should be
        visible at that point in x back end support

2011-11-24 Rafael Antognolli

        * Add ecore_fb_input_device_window_set().

2011-11-27 Vincent Torri

        * Fix and improve key management on Windows XP